Fix GitHub notebook rendering error

--- a/class.ipynb
+++ b/class.ipynb
@@ -110,64 +110,21 @@
    "source": [
     "Note that the `this` value may reference the \"global\" (`window` in the browser, `global` in Node) if we leave out `'use strict'`. This is almost always something that we don't want, therefore in ES5 the `'use strict'` directive was added to the language. (We want to protect ourselves against messing around accidentally with the global object.)\n",
     "\n",
-    "In example 4 below the `this` variable is a reference to the `global` of Node (a huge object).\n",
+    "In example 4 below the `this` variable is a reference to the `global` of Node (a _huge_ object).\n",
     "\n",
     "Note that adding `'use strict'` is not required when you use ES6 modules. It is implied there."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "4 object\n",
-      "<ref *1> Object [global] {\n",
-      "  global: [Circular *1],\n",
-      "  queueMicrotask: [Function: queueMicrotask],\n",
-      "  clearImmediate: [Function: clearImmediate],\n",
-      "  setImmediate: [Function: setImmediate] {\n",
-      "    [Symbol(nodejs.util.promisify.custom)]: [Getter]\n",
-      "  },\n",
-      "  structuredClone: [Function: structuredClone],\n",
-      "  clearInterval: [Function: clearInterval],\n",
-      "  clearTimeout: [Function: clearTimeout],\n",
-      "  setInterval: [Function: setInterval],\n",
-      "  setTimeout: [Function: setTimeout] {\n",
-      "    [Symbol(nodejs.util.promisify.custom)]: [Getter]\n",
-      "  },\n",
-      "  atob: [Function: atob],\n",
-      "  btoa: [Function: btoa],\n",
-      "  performance: Performance {\n",
-      "    nodeTiming: PerformanceNodeTiming {\n",
-      "      name: 'node',\n",
-      "      entryType: 'node',\n",
-      "      startTime: 0,\n",
-      "      duration: 6609249.186499953,\n",
-      "      nodeStart: 3.4078999757766724,\n",
-      "      v8Start: 9.620400071144104,\n",
-      "      bootstrapComplete: 54.510900020599365,\n",
-      "      environment: 31.887699961662292,\n",
-      "      loopStart: 2104.618700027466,\n",
-      "      loopExit: -1,\n",
-      "      idleTime: 6580526.4435\n",
-      "    },\n",
-      "    timeOrigin: 1678709727113.581\n",
-      "  },\n",
-      "  fetch: [AsyncFunction: fetch],\n",
-      "  __tslab__: {\n",
-      "    exports: {},\n",
-      "    require: [Function: require] {\n",
-      "      resolve: [Function],\n",
-      "      main: [Module],\n",
-      "      extensions: [Object: null prototype],\n",
-      "      cache: [Object: null prototype]\n",
-      "    }\n",
-      "  }\n",
-      "}\n"
+      "4 object\n"
      ]
     }
    ],
@@ -177,7 +134,6 @@
     "{\n",
     "  function foo() {\n",
     "    console.log(4, typeof this);\n",
-    "    console.log(this);\n",
     "   }\n",
     "\n",
     "   const result = foo();\n",
@@ -194,14 +150,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
+     "name": "stderr",
      "output_type": "stream",
      "text": [
-      "5 object\n"
+      "4:5 - Cannot find name 'console'. Do you need to change your target library? Try changing the `lib` compiler option to include 'dom'.\n"
      ]
     }
    ],
