--- a/class.ipynb
+++ b/class.ipynb
@@ -7,12 +7,12 @@
    "source": [
     "## Objects, Classes, new, this and prototypes\n",
     "\n",
-    "Calling a function that doesn't `return` anything simply return `undefined`. "
+    "Calling a function that doesn't `return` anything simply returns `undefined`. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -28,7 +28,7 @@
     "{\n",
     "  function foo() {\n",
     "    // Just an empty function\n",
-    "   }\n",
+    "  }\n",
     "\n",
     "  const result = foo();\n",
     "  console.log(1, typeof result);\n",
@@ -40,12 +40,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Calling the same function but now using the `new` keyword returns an object."
+    "Calling the same function, but now using the `new` keyword returns an object."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -61,7 +61,7 @@
     "{\n",
     "  function foo() {\n",
     "    // Just an empty function\n",
-    "   }\n",
+    "  }\n",
     "\n",
     "  const result = new foo();\n",
     "  //_____________^^^\n",
@@ -75,12 +75,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Every function has an associated `this` variable bound to its scope. The value of `this` is dependent on how the function is called. If it is called directly as in example 3 below its value is `undefined`. (If the function does not use `this` it might as well be `undefined`.)"
+    "Every function has an associated `this` variable bound to its scope. The value of `this` depends on how the function is called. If it is called directly as in example 3 below its value is `undefined`. (If the function has no use for `this` it might as well be `undefined`.)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -97,9 +97,9 @@
     "{\n",
     "  function foo() {\n",
     "    console.log(3, typeof this);\n",
-    "   }\n",
+    "  }\n",
     "\n",
-    "   const result = foo();\n",
+    "  const result = foo();\n",
     "}\n"
    ]
   },
@@ -108,16 +108,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Note that the `this` value may reference the \"global\" (`window` in the browser, `global` in Node) if we leave out `'use strict'`. This is almost always something that we don't want, therefore in ES5 the `'use strict'` directive was added to the language. (We want to protect ourselves against messing around accidentally with the global object.)\n",
+    "Note that the `this` value may reference the \"global\" object (`window` in the browser, `global` in Node) if we leave out `'use strict'`. This is almost always something that we don't want, therefore in ES5 the `'use strict'` directive was added to the language. (We want to protect ourselves against messing around accidentally with the global object.)\n",
     "\n",
     "In example 4 below the `this` variable is a reference to the `global` of Node (a _huge_ object).\n",
     "\n",
-    "Note that adding `'use strict'` is not required when you use ES6 modules. It is implied there."
+    "Note that adding `'use strict'` is not required when you use ES6 modules. It is implied in that case."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -134,9 +134,9 @@
     "{\n",
     "  function foo() {\n",
     "    console.log(4, typeof this);\n",
-    "   }\n",
+    "  }\n",
     "\n",
-    "   const result = foo();\n",
+    "  const result = foo();\n",
     "}\n"
    ]
   },
@@ -150,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -166,11 +166,10 @@
     "{\n",
     "  function foo() {\n",
     "    console.log(5, typeof this);\n",
-    "    \n",
-    "   }\n",
+    "  }\n",
     "\n",
-    "   const result = new foo();\n",
-    "   //_____________^^^\n",
+    "  const result = new foo();\n",
+    "  //_____________^^^\n",
     "}\n"
    ]
   },
@@ -184,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -201,10 +200,10 @@
     "  function Person(firstName, lastName) {\n",
     "    this.firstName = firstName;\n",
     "    this.lastName = lastName;\n",
-    "   }\n",
+    "  }\n",
     "\n",
-    "   const result = new Person('John', 'Doe');\n",
-    "   console.log(6, result)\n",
+    "  const result = new Person('John', 'Doe');\n",
+    "  console.log(6, result)\n",
     "}"
    ]
   },
@@ -218,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -238,10 +237,10 @@
     "    this.fullName = function() {\n",
     "      return this.firstName + ' ' + this.lastName;\n",
     "    }\n",
-    "   }\n",
+    "  }\n",
     "\n",
-    "   const john = new Person('John', 'Doe');\n",
-    "   console.log(7, john.fullName())\n",
+    "  const john = new Person('John', 'Doe');\n",
+    "  console.log(7, john.fullName())\n",
     "}"
    ]
   },
@@ -257,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -279,16 +278,16 @@
     "    this.fullName = function() {\n",
     "      return this.firstName + ' ' + this.lastName;\n",
     "    }\n",
-    "   }\n",
+    "  }\n",
     "\n",
-    "   const john = new Person('John', 'Doe');\n",
-    "   const jane = new Person('Jane', 'Seymour');\n",
+    "  const john = new Person('John', 'Doe');\n",
+    "  const jane = new Person('Jane', 'Seymour');\n",
     "\n",
-    "   console.log(8.1, john.fullName());\n",
-    "   console.log(8.2, jane.fullName());\n",
+    "  console.log(8.1, john.fullName());\n",
+    "  console.log(8.2, jane.fullName());\n",
     "\n",
-    "   // The fullName() methods are identical but separate copies\n",
-    "   console.log(8.3, john.fullName === jane.fullName);\n",
+    "  // The fullName() methods are identical but separate copies\n",
+    "  console.log(8.3, john.fullName === jane.fullName);\n",
     "}"
    ]
   },
@@ -304,7 +303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -323,20 +322,20 @@
     "  function Person(firstName, lastName) {\n",
     "    this.firstName = firstName;\n",
     "    this.lastName = lastName;\n",
-    "   }\n",
+    "  }\n",
     "\n",
-    "   Person.prototype.fullName = function() {\n",
+    "  Person.prototype.fullName = function() {\n",
     "    return this.firstName + ' ' + this.lastName;\n",
     "  }\n",
     "\n",
-    "   const john = new Person('John', 'Doe');\n",
-    "   const jane = new Person('Jane', 'Seymour');\n",
-    "   \n",
-    "   console.log(9.1, john.fullName());\n",
-    "   console.log(9.2, jane.fullName());\n",
+    "  const john = new Person('John', 'Doe');\n",
+    "  const jane = new Person('Jane', 'Seymour');\n",
+    "  \n",
+    "  console.log(9.1, john.fullName());\n",
+    "  console.log(9.2, jane.fullName());\n",
     "\n",
-    "   // The fullName() methods are one and the same, i.e. shared\n",
-    "   console.log(9.3, john.fullName === jane.fullName);\n",
+    "  // The fullName() methods are one and the same, i.e. shared\n",
+    "  console.log(9.3, john.fullName === jane.fullName);\n",
     "}"
    ]
   },
@@ -354,7 +353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -402,7 +401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
